# authentication-service

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  COMPLETE_TESTING_GUIDE.md  README.md  TESTING-GUIDE.md  TESTING.md  complete-insomnia-collection.json  detect_findings.baseline  docker-compose.yml  json-collection.json
auth_platform/: Dockerfile  README.md  TESTING_2FA.md  docker-compose.yml  pyproject.toml
auth_platform/auth_platform/auth_service/: auth.py  db.py  main.py  models.py  requirements.txt  schemas.py
auth_platform/auth_platform/auth_service/routes/: dev_monitor.py
auth_platform/auth_platform/auth_service/utils/: __init__.py  event_logger.py
auth_platform/auth_platform_tests/: __init__.py  test_2fa.py  test_auth.py  test_db_init.py  test_dev_monitor.py  test_event_logger.py  test_password_reset.py  test_tickets.py
dev-portal-ui/: Dockerfile  docker-compose.yml
mcp_server/: .dockerignore  ALERT_IMPLEMENTATION_SUMMARY.md  ALERT_REMOVAL_SUMMARY.md  ALERT_TO_EMAIL_MIGRATION.md  BAML_INTEGRATION.md  Dockerfile  EMAIL_NOTIFICATION_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  INSOMNIA_IMPORT_GUIDE.md  QUICK_TEST_GUIDE.md  README.md  __init__.py  baml_client.py  config.py  db.py  email-notification-insomnia.json  fraud_detector.py  insomnia-collection.json  main.py  models.py  requirements-test.txt  requirements.txt  schemas.py  test_alert_verification.py  test_alerts.py  test_email_notification_logs.py  test_events_query.py  test_fraud_assessments.py  test_fraud_detection.py  test_ingest_fraud_integration.py  test_ingest_manual.py  (+1 more)
(+47 files in other folders)
