[tool.poetry]
name = "auth_platform"
version = "0.1.0"
description = "FastAPI-based auth service with JWT and 2FA"
authors = [
"Fayed Raza <fayed.raza@outlook.com>"
]
readme = "README.md"
packages = [{ include = "auth_platform" }]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"  # latest
pydantic = "^2.12.0"
annotated-types = ">=0.6.0,<0.8.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
bcrypt = "4.3.0"
pyjwt = "^2.8.0"
testcontainers = "^4.13.2"
pyotp = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
httpx = "^0.27"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["auth_platform_tests"]
pythonpath = ["."]
